Workout controllers for client updated in backend side